--- a/app/templates/user/news-feed.html
+++ b/app/templates/user/news-feed.html
@@ -1,1 +1,13 @@
-<h1>Logged</h1>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <h3>News feed</h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-6 col-md-6 col-lg-6 col-md-offset-1">
+        <div posts></div>
+    </div>
+
+    <div class="col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1" friends-sidebar></div>
+</div>
+<toaster-container toaster-options="{'time-out': 1500, 'animation-class': 'toast-center'}"></toaster-container>
