--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="text-center">
-    <small>
-        <strong>Author:</strong> <a href="https://github.com/stefotoo" target="_blank">Stefan Tsekov</a>
-        <br>
-        <strong>&copy; 2015</strong>
-    </small>
+    <md-toolbar class="md-accent">
+        <h2 class="md-toolbar-tools">
+            <span flex>Author:<a href="https://github.com/stefotoo/Social-Network" target="_blank">Stefan Tsekov</a></span>
+        </h2>
+    </md-toolbar>
 </footer>
